# cold-start-embedding-alignment-repro

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md
scripts/: prepare_letitgo_zvuk_splits.py  prepare_yambda.py  run_e16_variants.py  run_e16_variants.sh  run_pairwise_grid.py  run_paper_comparable_sweep.py  run_paper_comparison.py  run_paper_repro.py
src/: paths.py
src/experiment/: __init__.py  analysis.py  config.py  data.py  models.py  pairwise.py  pairwise_grid.py  pipeline.py  training.py
src/paper/: __init__.py  comparable_sweep.py  comparison.py  e16_variants.py  repro.py
src/preparation/: __init__.py  yambda_splits.py  zvuk_splits.py
src/reports/: __init__.py  plots.py
